# write_down_your_goals

./: Cargo.toml  README.md
src/: db.rs  goals.db  goals.db-shm  goals.db-wal  main.rs
static/: add_goal.html  add_goal.js  index.html  main.js  show_goal.html  show_goal.js  style.css
