[package]
name = "write_down"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version= "0.7.4", features = [ "sqlite", "runtime-tokio", "tls-rustls"] }
tokio = { version = "1.37.0", features = [ "full" ] }
chrono = "0.4"
actix-web = "4.0"
actix-files = "0.6.0"
serde = "1.0.197"
serde_json = "1.0.115"

